--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
+    "recoil": "^0.7.5",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
